--- a/package.json
+++ b/package.json
@@ -10,17 +10,27 @@
     "pages:build": "npx @cloudflare/next-on-pages",
     "preview": "npm run pages:build && wrangler pages dev",
     "deploy": "npm run pages:build && wrangler pages deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
+    "db:studio": "npx drizzle-kit studio",
+    "db:push": "npx drizzle-kit push:pg",
+    "db:generate": "drizzle-kit generate:pg",
+    "db:seed": "node --loader esbuild-register/loader -r esbuild-register ./db/seed.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.30.0",
+    "@faker-js/faker": "^8.4.1",
+    "@neondatabase/serverless": "^0.9.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.9",
     "lucide-react": "^0.372.0",
     "next": "14.1.0",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
@@ -34,6 +44,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-next-on-pages": "^1.11.0",
