--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.30.0",
+    "@dnd-kit/core": "^6.1.0",
     "@faker-js/faker": "^8.4.1",
     "@neondatabase/serverless": "^0.9.1",
     "@radix-ui/react-dialog": "^1.0.5",
