--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.30.0",
+    "@dnd-kit/core": "^6.1.0",
+    "@faker-js/faker": "^8.4.1",
+    "@neondatabase/serverless": "^0.9.1",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
